--- a/src/market/recent-fills.html
+++ b/src/market/recent-fills.html
@@ -47,7 +47,12 @@
             }
 
             static get properties() {
-                return {};
+                return {
+                    token: {
+                        type: String,
+                    },
+
+                };
             }
 
             calPrice(b, s) {
