--- a/src/my-app.html
+++ b/src/my-app.html
@@ -76,6 +76,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="looper-page/signtosend-dialog.html">
 <link rel="import" href="utils/pretty-number.html">
 <link rel="import" href="utils/long-hash.html">
+<link rel="import" href="utils/time-str.html">
 <link rel="import" href="utils/notification-panel.html">
 <link rel="lazy-import" href="page-markets.html">
 <link rel="lazy-import" href="page-market.html">
@@ -93,6 +94,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="lazy-import" href="page-doc.html">
 <link rel="lazy-import" href="page-404.html">
 <link rel="lazy-import" href="page-dev.html">
+
 <dom-module id="my-app">
   <template>
     <style is="custom-style" include="iron-flex iron-flex-alignment app-grid-style"></style>
@@ -301,7 +303,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     _pageChanged(page) {
       // Load page import on demand. Show 404 page if fails
-      var resolvedPageUrl = this.resolveUrl('page-' + page + '.html');
+      const resolvedPageUrl = this.resolveUrl('page-' + page + '.html');
       Polymer.importHref(
         resolvedPageUrl,
         null,
