--- a/src/market/recent-orders.html
+++ b/src/market/recent-orders.html
@@ -7,10 +7,12 @@
             :host {
                 display: block;
             }
+
             paper-progress.green {
                 --paper-progress-active-color: var(--paper-light-green-700);
                 --paper-progress-secondary-color: var(--paper-red-500);
             }
+
             .container {
                 @apply(--layout-horizontal);
                 @apply(--layout-center);
@@ -23,16 +25,13 @@
         <vaadin-grid aria-label="Basic Binding Example" items="[[resp.result.data]]">
             <vaadin-grid-column width="50px">
                 <template class="header">Time</template>
-                <template><time-str second= "[[item.orginalOrder.timestamp]]"></time-str></template>
-            </vaadin-grid-column>
-            <vaadin-grid-column width="50px">
-                <template class="header">Type</template>
                 <template>
-                    <div class="horizontal end-justified layout">[[transtoUppercase(item.orginalOrder.tokenS)]]
-                        <div class="container"><iron-icon icon="icons:arrow-forward"></iron-icon></div>
-                        [[transtoUppercase(item.orginalOrder.tokenB)]]
-                    </div>
+                   [[traTimeStamp(item.orginalOrder.timestamp)]]
                 </template>
+            </vaadin-grid-column>
+            <vaadin-grid-column width="20px">
+                <template class="header">Type</template>
+                <template><span style$="color:[[typeStyle(item.orginalOrder.tokenB)]]"> [[getType(item.orginalOrder.tokenB)]]</span></template>
             </vaadin-grid-column>
             <vaadin-grid-column width="50px">
                 <template class="header">Amount</template>
@@ -50,15 +49,19 @@
             </vaadin-grid-column>
             <vaadin-grid-column>
                 <template class="header">Hash</template>
-                <template><a href="#/order/[[item.orginalOrder.hash]]"><long-hash hash="[[item.orginalOrder.hash]]"></long-hash></a></template>
+                <template><a href="#/order/[[item.orginalOrder.hash]]">
+                    <long-hash hash="[[item.orginalOrder.hash]]"></long-hash>
+                </a></template>
             </vaadin-grid-column>
 
             <vaadin-grid-column width="50px">
-                <template class="header" >Status</template>
+                <template class="header">Status</template>
                 <template>
-                 <div class="horizontal end-justified layout">
-                     <paper-progress class="green" value="[[numberFormat(item.totalDealedAmountB)]]"
-                                     secondary-progress="60"   max="[[numberFormat(item.orginalOrder.amountB)]]" style="width: 50px"></paper-progress></div>
+                    <div class="horizontal end-justified layout">
+                        <paper-progress class="green" value="[[numberFormat(item.totalDealedAmountB)]]"
+                                        secondary-progress="60" max="[[numberFormat(item.orginalOrder.amountB)]]"
+                                        style="width: 50px"></paper-progress>
+                    </div>
                 </template>
             </vaadin-grid-column>
         </vaadin-grid>
@@ -70,7 +73,9 @@
             }
 
             static get properties() {
-                return {};
+                return {
+                    token: String
+                };
             }
 
             transtoUppercase(str) {
@@ -120,6 +125,16 @@
                     );
                 }
                 return 'Error';
+            }
+
+
+            typeStyle(tokenB) {
+
+                return tokenB=== this.token ? 'var(--paper-green-500)' : 'var(--paper-red-500)';
+            }
+
+            getType(tokenB) {
+                return tokenB === this.token ? 'Buy' : 'Sell';
             }
 
         }
