--- a/src/utils/time-str.html
+++ b/src/utils/time-str.html
@@ -8,7 +8,7 @@
                 display: inline-block;
             }
         </style>
-            <span>[[time]]</span>
+        <span>[[time]]</span>
     </templte>
 
     <script>
@@ -29,16 +29,12 @@
             }
 
             _update(second) {
-
-                console.log(second);
                 if (second) {
                     const date = new Date(second * 1000);
                     this.time = (
                         date.getFullYear() +
                         '-' +
-                        (date.getMonth() < 9
-                            ? '0' + (date.getMonth() + 1)
-                            : date.getMonth() + 1) +
+                        (date.getMonth() < 9 ? '0' + (date.getMonth() + 1) : date.getMonth() + 1) +
                         '-' +
                         (date.getDate() < 10 ? '0' + date.getDate() : date.getDate()) +
                         ' ' +
@@ -48,6 +44,7 @@
                         ':' +
                         (date.getSeconds() < 10 ? '0' + date.getSeconds() : date.getSeconds())
                     );
+                    console.log(this.time);
                 } else {
                     this.time = 'Error';
                 }
