--- a/src/my-app.html
+++ b/src/my-app.html
@@ -78,6 +78,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="utils/long-hash.html">
 <link rel="import" href="utils/time-str.html">
 <link rel="import" href="utils/notification-panel.html">
+<link rel="import" href="market/recent-fills.html">
 <link rel="lazy-import" href="page-markets.html">
 <link rel="lazy-import" href="page-market.html">
 <link rel="lazy-import" href="page-rings.html">
