--- a/src/market/recent-orders.html
+++ b/src/market/recent-orders.html
@@ -26,12 +26,13 @@
             <vaadin-grid-column width="50px">
                 <template class="header">Time</template>
                 <template>
-                   [[traTimeStamp(item.orginalOrder.timestamp)]]
+                    <time-str seconds="[[item.orginalOrder.timestamp]]"></time-str>
                 </template>
             </vaadin-grid-column>
             <vaadin-grid-column width="20px">
                 <template class="header">Type</template>
-                <template><span style$="color:[[typeStyle(item.orginalOrder.tokenB)]]"> [[getType(item.orginalOrder.tokenB)]]</span></template>
+                <template><span style$="color:[[typeStyle(item.orginalOrder.tokenB)]]"> [[getType(item.orginalOrder.tokenB)]]</span>
+                </template>
             </vaadin-grid-column>
             <vaadin-grid-column width="50px">
                 <template class="header">Amount</template>
@@ -89,7 +90,7 @@
                 if (hex) {
                     return Number(hex);
                 }
-                return 'Error';
+                return '';
             }
 
             numberFormat(num) {
@@ -105,32 +106,9 @@
 
             }
 
-            traTimeStamp(ts) {
-                if (ts) {
-                    const date = new Date(ts * 1000);
-                    return (
-                        date.getFullYear() +
-                        '-' +
-                        (date.getMonth() < 9
-                            ? '0' + (date.getMonth() + 1)
-                            : date.getMonth() + 1) +
-                        '-' +
-                        (date.getDate() < 10 ? '0' + date.getDate() : date.getDate()) +
-                        ' ' +
-                        (date.getHours() < 10 ? '0' + date.getHours() : date.getHours()) +
-                        ':' +
-                        (date.getMinutes() < 10 ? '0' + date.getMinutes() : date.getMinutes()) +
-                        ':' +
-                        (date.getSeconds() < 10 ? '0' + date.getSeconds() : date.getSeconds())
-                    );
-                }
-                return 'Error';
-            }
-
-
             typeStyle(tokenB) {
 
-                return tokenB=== this.token ? 'var(--paper-green-500)' : 'var(--paper-red-500)';
+                return tokenB === this.token ? 'var(--paper-green-500)' : 'var(--paper-red-500)';
             }
 
             getType(tokenB) {
